--- a/Williamsoppddrag25.04/nettside/Kalk.html
+++ b/Williamsoppddrag25.04/nettside/Kalk.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <title>Kalkulator</title>
 </head>
 <body>
@@ -12,7 +12,6 @@
         <div class="calculator dark">
             <div class="theme toggler active">
                 <i class="toggler-icon"></i>
-
             </div>
             <div class="display-screen">
                 <div id="display"></div>
@@ -20,10 +19,10 @@
             <div class="botton">
                 <table>
                     <tr>
-                        <td><botton class="btn-operator" id="clear">C</botton></td>
-                        <td><botton class="btn-operator" id="/">&divide;</botton></td>
-                        <td><botton class="btn-operator" id="*">&time;</botton></td>
-                        <td><botton class="btn-operator" id="backspace"><</botton></td>
+                        <td><button class="btn-operator" id="clear">C</button></td>
+                        <td><button class="btn-operator" id="/">&divide;</button></td>
+                        <td><button class="btn-operator" id="*">&times;</button></td>
+                        <td><button class="btn-operator" id="backspace">&lt;</button></td>
                     </tr>
                     <tr>
                         <td><button class="btn-number" id="7">7</button></td>
@@ -40,7 +39,7 @@
                     <tr>
                         <td><button class="btn-number" id="1">1</button></td>
                         <td><button class="btn-number" id="2">2</button></td>
-                        <td><button class="btn-number" id="4">3</button></td>
+                        <td><button class="btn-number" id="3">3</button></td>
                         <td rowspan="2"><button class="btn-equal" id="equal">=</button></td>
                     </tr>
                     <tr>
@@ -51,15 +50,7 @@
                 </table>
             </div>
         </div>
-
-
-
-
     </div>
-    
-
-
-    <script> src="script.js"</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
